core/components/com_jobs/site/assets/css/jobs.css
/* ... */
	#jobinfo h2 {
		font-size: 110%;
	}
	#jobinfo h1 {
		font-size: 130%;
	}
	#jobinfo div.apply {
		float: right;
		padding: 2em;
		text-align: center;
		margin: 0;
		margin-right: 2em;
		margin-top: -1.2em;
		overflow: visible;
		width: 300px;
	}
	#jobinfo div.apply span {
		display: block;
		font-weight: normal;
	}
	#jobinfo div.apply .applybtn {
		padding: 0.2em 1em 0.2em 1em;
		background-color: #b48661;
		border-bottom: 2px solid #aa642b;
		border-right: 2px solid #aa642b;
		color: #FFFFFF;
		font-weight: bold;
		-webkit-border-radius: 6px;
		-moz-border-radius: 6px;
		-ms-border-radius: 6px;
		-o-border-radius: 6px;
		border-radius: 6px;
	}
	.apply button {
		margin-bottom: 1em;
		margin-right: .5em;
		font-size: 1.2em;
		padding-left: 2em;
		padding-right: 2em;
	}
	.edit button {
		margin-bottom: 1em;
		font-size: 1.2em;
		padding-left: 2em;
		padding-right: 2em;
		//float: right;
	}
	.unpublish button {
		margin-bottom: 1em;
		font-size: 1.2em;
		padding-left: 2em;
		padding-right: 2em;
		float: right;
	}
	.applied button {
		margin-bottom: 1em;
		font-size: 1.2em;
		padding-left: 2em;
		padding-right: 2em;
	}
	#jobinfo div.apply .applybtn:hover {
		background-color: #666;
		border-bottom: 2px solid #000;
		border-right: 2px solid #000;
	}
	#jobinfo div.apply a {
		width: auto;
		border: none;
	}
	#jobinfo div.apply .applybtn a {
		color: #FFFFFF;
		border: none;
	}
	#jobinfo div.apply p {
		color: #a14d09;
		font-weight: bold;
	}
	#jobinfo div.apply span.or {
		display: block;
		font-style: italic;
		color: #666666;
		margin-bottom: 0.5em;
		font-weight: normal;
	}
	#jobinfo div.apply a.extlink {
		display:block;
		text-decoration: underline;
		color: #a14d09;
		font-weight: bold;
	}
	#jobinfo div.apply a.extlink:hover {
		color: #FF0000;
	}
	.postings span.alreadyapplied {
		color: #009900;
	}
	.postings span.alreadyapplied:before,
	#jobinfo div.apply .alreadyapplied:before {
		content: "\2714";
		font-family: 'Fontcons';
		margin-right: 0.2em;
		color: green;
		font-size: 120%;
	}
	#jobinfo div.apply .alreadyapplied {
		color: #009900;
		width: auto;
		text-align: left;
		padding-left: 16px;
		font-weight: bold;
	}
	.postings span.withdrawn {
		color: #990000;
	}
	#jobinfo div.apply .withdrawn {
		color: #990000;
		width: auto;
		text-align: left;
	}
	.postings span.withdrawn:before,
	#jobinfo div.apply .withdrawn:before {
		color: #990000;
		content: "\2296";
		font-family: 'Fontcons';
		margin-right: 0.2em;
		font-size: 120%;
	}
	.contactname,
	.contactinfo {
		display: block;
	}
	.contactname {
		font-weight: bold;
	}
	.confirmPublish {
		text-align: center;
		margin-top: 2em;
	}
	.manageroptions {
		float: right;
		font-size: 85%;
	}
/* Job Posting  List */
	ul.postings {
		list-style: none;
		margin: 1em 0 0 0;
		padding: 0 0 1em 0;
	}
	table.postings {
		font-size: 90%;
	}
	table.postings td {
		border-bottom: 1px solid #ccc;
	}
	table.postings td.post_inactive {
		color: #666666;
	}
	table.postings td.post_invalidsub {
		color: #990000;
	}
	table.postings td.post_active {
		color: #006600;
	}
	table.postings td.post_pending {
		color: #3333FF;
	}
	table.postings td.post_draft {
		color: #996633;
	}
	ul.postings li,
	table.postings td.jobtitle {
		color: #666;
		border-bottom: 1px solid #ccc;
		font-size: 110%;
		width: 220px;
	}
	ul.postings li:before,
	table.postings td.jobtitle:before {
		content: "\f02a";
		font-family: 'Fontcons';
		margin-right: 0.2em;
		color: green;
		font-size: 120%;
	}

	table.postings td.secondary {
		color: #999999;
	}
	ul.postings li.headings,
	.headings {
		font-style: italic;
		color: #666666;
	}
	ul.postings li.headings td,
	.headings td {
		white-space: nowrap;
	}
	ul.postings li.cattitle {
		color: #000;
		font-size: 110%;
		font-weight: bold;
		padding-left: 0;
		background: none;
	}
	ul.postings li span {
		color: #666;
		float: right;
		padding-right: 0.5em;
		font-size: x-small;
		margin-left: -5em;
	}
	ul.postings li span.datedisplay {
		color: #666;
		padding-right: 0;
		white-space: nowrap;
		margin: 0;
	}
	.review_applicants {
		font-size: 1.2em;
		padding-top: .5em;
		float: right;
	}
/* Confirm screen */
	div.confirmwrap {
		position: relative;
		display: none;
	}
	div.confirmscreen {
		position: absolute;
		border: 5px solid #ee5f5b;
		background-color: #FFFFFF;
		left: 0;
		width: 350px;
		margin: 0;
		-webkit-border-radius: 12px;
		-moz-border-radius: 12px;
		-ms-border-radius: 12px;
		-o-border-radius: 12px;
		border-radius: 12px;
	}
	.confirmscreen span {
		margin: 0 !important;
		padding: 0 !important;
		display: inline !important;
	}
	.confirmscreen .no {
		margin-left: 2em !important;
	}
	.confirmscreen p {
		text-align: center !important;
		position: relative;
		margin: 0.8em !important;
		padding: 0;
		color: #333 !important;
		font-weight: normal !important;
	}
	.confirmscreen p.warning {
		background-color: #FFFFFF;
		border: none;
		background-position: 0 50%;
		text-align: center !important;
		padding-left: 20px !important;
	}
/* Resume Stats */
	ul.jobstats {
		list-style: none;
		border: 1px dashed #f36e21;
		margin: 2em 0 0 0;
		padding: 0 1em 1em 1em;
	}
	ul.jobstats li {
		color: #666;
		font-size: 90%;
		border-bottom: 1px solid #ccc;
	}
	ul.jobstats li span {
		color: #000000;
		float: right;
		padding-right: 0.5em;
		font-weight: bold;
	}
	ul.jobstats li.statstitle {
		font-weight: bold;
		color: #993300;
		text-transform: uppercase;
		font-size: 85%;
	}
/* Search Form */
	.com_jobs .together input,
	.com_jobs .together .option {
		display: inline !important;
		margin: 0;
		padding: 0;
		width: auto;
	}
	.com_jobs .together {
		margin-bottom: 1em;
		padding-bottom: 0.5em;
		border-bottom: 2px solid #e8e8e8;
	}
	.com_jobs .together label {
		margin-top: 0;
	}
	#matchsearch .submit,
	.submit {
		margin-top: 1em;
		display: block;
	}
/* Resume List */
	#candidates {
		padding: 0;
		margin: 0.5em 0 0 0;
		list-style: none;
		border-top: 4px solid #e3e3e3;
	}
	#candidates li {
		background: #FFF;
	}
/* ... */

